apps/web/check_err_3.txt
    Updating crates.io index
     Locking 90 packages to latest compatible versions
      Adding adler2 v2.0.1
      Adding arbitrary v1.4.2
      Adding arrayvec v0.7.6
      Adding cobs v0.3.0
      Adding crc32fast v1.5.0
      Adding crlify v1.0.4
      Adding crossbeam-deque v0.8.6
      Adding crossbeam-epoch v0.9.18
      Adding databake v0.2.0
      Adding databake-derive v0.2.0
      Adding derive_arbitrary v1.4.2
      Adding downcast-rs v1.2.1
      Adding elsa v1.11.2
      Adding erased-serde v0.4.9
      Adding filetime v0.2.26
      Adding flate2 v1.1.5
      Adding foldhash v0.1.5
      Adding hashbrown v0.15.5
      Adding icu v2.1.1
      Adding icu_codepointtrie_builder v0.5.1
      Adding icu_collator v2.1.1
      Adding icu_provider_baked v2.1.1
      Adding icu_provider_export v2.1.1
      Adding icu_provider_registry v2.1.1
      Adding icu_provider_source v2.1.1
      Adding icu_segmenter v2.1.2
      Adding ixdtf v0.6.4
      Adding leb128fmt v0.1.0
      Adding leptos_i18n_build v0.6.0
      Adding libredox v0.1.12
      Adding matrixmultiply v0.3.10
      Adding miniz_oxide v0.8.9
      Adding multi-stash v0.2.0
      Adding ndarray v0.16.1
      Adding num-complex v0.4.6
      Adding ordered-float v2.10.1
      Adding parse-zoneinfo v0.5.0
      Adding portable-atomic v1.13.0
      Adding portable-atomic-util v0.2.4
      Adding postcard v1.1.3
      Adding rawpointer v0.2.1
      Adding rayon v1.11.0
      Adding rayon-core v1.13.0
      Adding redox_syscall v0.7.0
      Adding ring v0.17.14
      Adding rustls v0.23.36
      Adding rustls-pki-types v1.13.2
      Adding rustls-webpki v0.103.8
      Adding serde-aux v4.7.0
      Adding serde-value v0.7.0
      Adding serde_spanned v0.6.9
      Adding simd-adler32 v0.3.8
      Adding spin v0.9.8
      Adding string-interner v0.18.0
      Adding subtle v2.6.1
      Adding tar v0.4.44
      Adding toml v0.8.23
      Adding toml_datetime v0.6.11
      Adding toml_edit v0.22.27
      Adding twox-hash v2.1.2
      Adding typeid v1.0.3
      Adding unicode-width v0.2.2
      Adding untrusted v0.9.0
      Adding ureq v3.1.4
      Adding ureq-proto v0.5.3
      Adding utf16_iter v1.0.5
      Adding wasm-encoder v0.244.0
      Adding wasmi v0.40.0
      Adding wasmi_collections v0.40.0
      Adding wasmi_core v0.40.0
      Adding wasmi_ir v0.40.0
      Adding wasmparser v0.221.3
      Adding wasmparser v0.244.0
      Adding wast v244.0.0
      Adding wat v1.244.0
      Adding webpki-roots v1.0.5
      Adding windows-sys v0.52.0
      Adding windows-targets v0.52.6
      Adding windows_aarch64_gnullvm v0.52.6
      Adding windows_aarch64_msvc v0.52.6
      Adding windows_i686_gnu v0.52.6
      Adding windows_i686_gnullvm v0.52.6
      Adding windows_i686_msvc v0.52.6
      Adding windows_x86_64_gnu v0.52.6
      Adding windows_x86_64_gnullvm v0.52.6
      Adding windows_x86_64_msvc v0.52.6
      Adding write16 v1.0.0
      Adding zeroize v1.8.2
      Adding zip v2.4.2
      Adding zopfli v0.8.3
 Downloading crates ...
  Downloaded cobs v0.3.0
  Downloaded databake-derive v0.2.0
  Downloaded arrayvec v0.7.6
  Downloaded erased-serde v0.4.9
  Downloaded crlify v1.0.4
  Downloaded leb128fmt v0.1.0
  Downloaded ordered-float v2.10.1
  Downloaded databake v0.2.0
  Downloaded foldhash v0.1.5
  Downloaded serde-value v0.7.0
  Downloaded downcast-rs v1.2.1
  Downloaded rawpointer v0.2.1
  Downloaded icu_provider_export v2.1.1
  Downloaded icu_codepointtrie_builder v0.5.1
  Downloaded icu_provider_baked v2.1.1
  Downloaded ureq-proto v0.5.3
  Downloaded wat v1.244.0
  Downloaded wasmi_ir v0.40.0
  Downloaded string-interner v0.18.0
  Downloaded serde-aux v4.7.0
  Downloaded postcard v1.1.3
  Downloaded matrixmultiply v0.3.10
  Downloaded typeid v1.0.3
  Downloaded spin v0.9.8
  Downloaded multi-stash v0.2.0
  Downloaded leptos_i18n_build v0.6.0
  Downloaded icu v2.1.1
  Downloaded wasmparser v0.244.0
  Downloaded num-complex v0.4.6
  Downloaded ixdtf v0.6.4
  Downloaded wasmi_collections v0.40.0
  Downloaded icu_provider_registry v2.1.1
  Downloaded elsa v1.11.2
  Downloaded wasmi_core v0.40.0
  Downloaded twox-hash v2.1.2
  Downloaded icu_segmenter v2.1.2
  Downloaded hashbrown v0.15.5
  Downloaded parse-zoneinfo v0.5.0
  Downloaded icu_collator v2.1.1
  Downloaded ndarray v0.16.1
  Downloaded wasm-encoder v0.244.0
  Downloaded ureq v3.1.4
  Downloaded wast v244.0.0
  Downloaded wasmparser v0.221.3
  Downloaded wasmi v0.40.0
  Downloaded icu_provider_source v2.1.1
   Compiling stable_deref_trait v1.2.1
   Compiling serde v1.0.228
   Compiling writeable v0.6.2
   Compiling typeid v1.0.3
   Compiling erased-serde v0.4.9
   Compiling litemap v0.8.1
   Compiling databake-derive v0.2.0
   Compiling cobs v0.3.0
   Compiling num-traits v0.2.19
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.6
   Compiling yoke v0.8.1
   Compiling crc32fast v1.5.0
   Compiling windows_x86_64_msvc v0.53.1
   Compiling serde_json v1.0.149
   Compiling crossbeam-utils v0.8.21
   Compiling simd-adler32 v0.3.8
   Compiling zeroize v1.8.2
   Compiling calendrical_calculations v0.2.3
   Compiling toml_parser v1.0.6+spec-1.1.0
   Compiling getrandom v0.2.16
   Compiling wasmparser v0.221.3
   Compiling untrusted v0.9.0
   Compiling downcast-rs v1.2.1
   Compiling rustls-pki-types v1.13.2
   Compiling httparse v1.10.1
   Compiling leb128fmt v0.1.0
   Compiling adler2 v2.0.1
   Compiling regex-syntax v0.8.8
   Compiling ixdtf v0.6.4
   Compiling cc v1.2.51
   Compiling smallvec v1.15.1
   Compiling databake v0.2.0
   Compiling postcard v1.1.3
   Compiling wasm-encoder v0.244.0
   Compiling miniz_oxide v0.8.9
   Compiling windows-targets v0.53.5
   Compiling toml v0.9.10+spec-1.1.0
   Compiling serde_yaml v0.9.34+deprecated
   Compiling json5 v1.3.0
   Compiling wasmi_core v0.40.0
   Compiling proc-macro-utils v0.10.0
   Compiling fixed_decimal v0.7.1
   Compiling parking_lot_core v0.9.12
   Compiling parking_lot v0.12.5
   Compiling crossbeam-epoch v0.9.18
   Compiling matrixmultiply v0.3.10
   Compiling icu_provider_registry v2.1.1
   Compiling rayon-core v1.13.0
   Compiling unicode-width v0.2.2
   Compiling regex-automata v0.4.13
   Compiling manyhow-macros v0.11.4
   Compiling quote-use-macros v0.8.4
   Compiling rustls v0.23.36
   Compiling crossbeam-deque v0.8.6
   Compiling http v1.4.0
   Compiling wast v244.0.0
   Compiling flate2 v1.1.5
   Compiling wasmi_ir v0.40.0
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling windows-sys v0.60.2
   Compiling serde_spanned v0.6.9
   Compiling toml_datetime v0.6.11
   Compiling multi-stash v0.2.0
   Compiling manyhow v0.11.4
   Compiling once_cell v1.21.3
   Compiling wasmi_collections v0.40.0
   Compiling rawpointer v0.2.1
   Compiling arrayvec v0.7.6
   Compiling subtle v2.6.1
   Compiling zip v2.4.2
   Compiling spin v0.9.8
   Compiling num-integer v0.1.46
   Compiling ring v0.17.14
   Compiling quote-use v0.8.4
   Compiling ordered-float v2.10.1
   Compiling num-complex v0.4.6
   Compiling ureq-proto v0.5.3
   Compiling toml_edit v0.22.27
   Compiling attribute-derive-macro v0.10.5
   Compiling num-bigint v0.4.6
   Compiling filetime v0.2.26
   Compiling serde-value v0.7.0
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling icu_pattern v0.4.1
   Compiling zopfli v0.8.3
   Compiling leptos_hot_reload v0.8.5
   Compiling webpki-roots v1.0.5
   Compiling icu_collections v2.1.1
   Compiling crlify v1.0.4
   Compiling icu_locale_core v2.1.1
   Compiling heck v0.5.0
   Compiling serde-aux v4.7.0
   Compiling rayon v1.11.0
   Compiling ndarray v0.16.1
   Compiling tar v0.4.44
   Compiling leptos_hot_reload v0.7.8
   Compiling elsa v1.11.2
   Compiling num-rational v0.4.2
   Compiling twox-hash v2.1.2
   Compiling parse-zoneinfo v0.5.0
   Compiling icu_provider v2.1.1
   Compiling toml v0.8.23
   Compiling icu_locale v2.1.1
   Compiling icu_properties v2.1.2
   Compiling icu_decimal v2.1.1
   Compiling attribute-derive v0.10.5
   Compiling icu_calendar v2.1.1
   Compiling icu_list v2.1.1
   Compiling icu_segmenter v2.1.2
   Compiling icu_provider_baked v2.1.1
   Compiling leptos_macro v0.8.14
   Compiling leptos_macro v0.7.9
   Compiling wasmi v0.40.0
   Compiling icu_plurals v2.1.1
   Compiling icu_provider_export v2.1.1
   Compiling icu_time v2.1.1
   Compiling wat v1.244.0
   Compiling icu_normalizer v2.1.1
   Compiling icu_casemap v2.1.1
   Compiling leptos_i18n_parser v0.6.0
   Compiling icu_datetime v2.1.1
   Compiling icu_collator v2.1.1
   Compiling icu_experimental v0.4.0
   Compiling rustls-webpki v0.103.8
   Compiling leptos_i18n_codegen v0.6.0
    Checking leptos v0.7.8
    Checking leptos v0.8.15
    Checking leptos_router v0.7.8
    Checking leptos_meta v0.7.8
   Compiling icu_codepointtrie_builder v0.5.1
    Checking leptos_meta v0.8.5
    Checking leptos-use v0.17.0
   Compiling leptos_i18n_macro v0.6.0
   Compiling icu v2.1.1
   Compiling ureq v3.1.4
    Checking leptos_i18n v0.6.0
   Compiling icu_provider_source v2.1.1
   Compiling leptos_i18n_build v0.6.0
   Compiling deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0425]: cannot find function `generate` in crate `leptos_i18n_build`
 --> apps\web\build.rs:2:24
  |
2 |     leptos_i18n_build::generate();
  |                        ^^^^^^^^ not found in `leptos_i18n_build`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `deve_web` (build script) due to 1 previous error
